--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="Features\AiAttackOrderSystemTests.cs" />
     <Compile Include="Features\AiMoveOrderSystemTests.cs" />
+    <Compile Include="Features\AttackSystemTests.cs" />
     <Compile Include="Features\CreateSquad\SquadCreationSystemTests.cs" />
     <Compile Include="Features\CreateSquad\TestEntity.cs" />
     <Compile Include="Features\CreateSquad\TestPool.cs" />
