--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -132,6 +132,9 @@
     <Compile Include="Assets\Features\RenderPositionSystem.cs" />
     <Compile Include="Assets\Features\RenderRotationSystem.cs" />
     <Compile Include="Assets\Features\RotationComponent.cs" />
+    <Compile Include="Assets\Features\Selection\SelectSquadSystem.cs" />
+    <Compile Include="Assets\Features\Selection\SelectedComponent.cs" />
+    <Compile Include="Assets\Features\Selection\SelectionAreaComponent.cs" />
     <Compile Include="Assets\Features\SquadAudioSystem.cs" />
     <Compile Include="Assets\Features\SquadCenterPositionSystem.cs" />
     <Compile Include="Assets\Features\UnitsCacheComponent.cs" />
@@ -175,6 +178,9 @@
     <Compile Include="Assets\Generated\RenderPositionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\RenderRotationSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\RotationComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\SelectSquadSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\SelectedComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\SelectionAreaGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadAttackOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadCenterPositionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadComponentGeneratedExtension.cs" />
