--- a/UnityVS.MicroTactics.CSharp.csproj
+++ b/UnityVS.MicroTactics.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.1.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -100,7 +98,6 @@
     <Compile Include="Assets\Features\Attack\SquadAttackOrderSystem.cs" />
     <Compile Include="Assets\Features\Attack\VelocityComponent.cs" />
     <Compile Include="Assets\Features\AudioComponent.cs" />
-    <Compile Include="Assets\Features\InputComponent.cs" />
     <Compile Include="Assets\Features\ComponentContainer.cs" />
     <Compile Include="Assets\Features\ConvexHullCalculator.cs" />
     <Compile Include="Assets\Features\CreateSquad\AddUnitViewSystem.cs" />
@@ -118,6 +115,7 @@
     <Compile Include="Assets\Features\Destruction\DestroySystem.cs" />
     <Compile Include="Assets\Features\Destruction\RemoveViewSystem.cs" />
     <Compile Include="Assets\Features\EnemyComponent.cs" />
+    <Compile Include="Assets\Features\InputComponent.cs" />
     <Compile Include="Assets\Features\MouseInput.cs" />
     <Compile Include="Assets\Features\Move\AiComponent.cs" />
     <Compile Include="Assets\Features\Move\AiMoveOrderSystem.cs" />
@@ -135,11 +133,11 @@
     <Compile Include="Assets\Features\RemovePhysicsSystem.cs" />
     <Compile Include="Assets\Features\RotationComponent.cs" />
     <Compile Include="Assets\Features\Selection\BoundingMeshComponent.cs" />
-    <Compile Include="Assets\Features\Selection\SquadInteractionSystem.cs" />
     <Compile Include="Assets\Features\Selection\SelectedComponent.cs" />
     <Compile Include="Assets\Features\Selection\SelectionAreaComponent.cs" />
     <Compile Include="Assets\Features\Selection\SelectionAreaUpdateSystem.cs" />
     <Compile Include="Assets\Features\Selection\SelectionMeshUpdateSystem.cs" />
+    <Compile Include="Assets\Features\Selection\SquadInteractionSystem.cs" />
     <Compile Include="Assets\Features\SquadAudioSystem.cs" />
     <Compile Include="Assets\Features\SquadCenterPositionSystem.cs" />
     <Compile Include="Assets\Features\Triangulator.cs" />
@@ -162,7 +160,6 @@
     <Compile Include="Assets\Generated\ArrowComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ArrowStickToCollidedSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ArrowTemplateComponentGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\Assets.Features.Move.GroundComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Move.RemoveMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.SquadAudioSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AttackOrderComponentGeneratedExtension.cs" />
@@ -175,6 +172,7 @@
     <Compile Include="Assets\Generated\DestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroySystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\EnemyComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\GroundComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\InputComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\LinkViewsStartSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\MoveOrderComponentGeneratedExtension.cs" />
@@ -191,7 +189,6 @@
     <Compile Include="Assets\Generated\RenderRotationSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ResourceComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\RotationComponentGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\SelectSquadSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SelectedComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SelectionAreaComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SelectionAreaUpdateSystemGeneratedExtension.cs" />
@@ -200,6 +197,7 @@
     <Compile Include="Assets\Generated\SquadCenterPositionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadCreationSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\SquadInteractionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitTemplateComponentGeneratedExtension.cs" />
